# com-brightsign-stuff

./: .gitignore  Pipfile  feedparser.py  legistar_rss_feeds.md  pyproject.toml  testserver.py  weather-current.html
meetings/: main.js  meetings-tmpl.html  style.css
meetings/includes/: feed-item.html
src/brightsignweb/: __main__.py  civicplus.py  feedparser.py  localstorage.py  main.py  requests.py  rss_feeds.py  serialization.py  staticfiles.py  timezone.py  types.py  weather.py  weather_types.py
src/brightsignweb/meetings/: MeetingsRSS.xml  civicplus-events.html  custom-feed-item-form.html  feedparser.js  index.html  meetings-tmpl.html  signage.html  style.css
src/brightsignweb/meetings/includes/: civicplus-feed-item.html  civicplus-feed.html  feed-item.html  feed.html
src/brightsignweb/weather2/: openweather.css  openweather.html  openweather.js
src/brightsignweb/weather2/includes/: weather-current.html  weather-forecast-item.html  weather-forecast.html
static-weather/: weather-forecast.html
weather2/: openweather.css  openweather.html  openweather.js  skysim.html  skysim.js
weather2/includes/: weather-current.html  weather-forecast-item.html  weather-forecast.html
